using SnekSweeperCore.GridSystem;

namespace SnekSweeperCore.CheatCodeSystem;

public interface ICheatCodeGridEffect
{
    void Trigger(IHumbleGrid humbleGrid);
}