@startuml
'https://plantuml.com/class-diagram

hide empty members

class CheatCode
{
    CheatCodeId id
    CheatCodeData data
    ICheatCodeGridEffect? initEffect
}

struct CheatCodeId
struct CheatCodeData

CheatCodeId --* CheatCode::id
CheatCodeData --* CheatCode::data

class CheatCodeHandler
{
    List<ICheatCodeGridEffect> initEffects
    void TriggerInitEffects()
}

ICheatCodeGridEffect --o CheatCodeHandler::initEffects

interface ICheatCodeGridEffect
{
    void TakeEffect(IHumbleGrid)
}

interface IHumbleGrid

class SetCoverAlphaEffect

SetCoverAlphaEffect ..|> ICheatCodeGridEffect

SetCoverAlphaEffect ..> IHumbleGrid


@enduml